src/objects/Contact_Role_Service_Permission__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Role Service</label>
        <referenceTo>Contact_Role_Service__c</referenceTo>
        <relationshipLabel>Contact Role Service Permissions</relationshipLabel>
        <relationshipName>Contact_Role_Service_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact Role Service Permission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Url__c</columns>
        <columns>Category__c</columns>
        <columns>Contact_Role_Service__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Url__c</field>
            <operation>contains</operation>
            <value>https</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Role Service Permission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Role Service Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>